Corrected testing for equality between effectively identical units (i.e., ScaledUnit-s with unity scaling, OffsetUnit-s with zero offset, and DerivedUnit-s with one BaseUnit).